# software_renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  build.ps1  build_invocations.txt
assets/: head.fbx
bug_hunt_notes/: BUG3.txt
notes/: tasks.txt
notes/bug_hunt_notes/: BUG3.txt  bugs.txt
src/: App.h  Benchmark.h  Color.h  DrawLine.h  Error.h  Frame.h  Frames.h  GLM_Model.h  Pixel.h  Presenter.h  Primitives.h  Renderer.h  buffers.h  dod.h  geometry.h  main.cpp  model.cpp  model.h  transforms.h  wireframe.h
src/New/: Mesh.h  Model.h  Renderer.h  Scene.h  Transform.h  wireframe.h
src/dod/: RectangularArray.h  barycentric.h  box.h  buffers.h  data.h  lighting.h  model.h  triangles.h  zbuffer.h
src/primitives/: frame.h  pixel.h
